[build-system]
requires = ["setuptools>=75", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pyexshalos"
version = "0.1.0"
description = "A pyhon package for ExSHalos"
authors = [
    {name = "Rodrigo Voivodic", email = "rodrigo.voivodic@gmail.com"}
]
dependencies = [
    "scipy",
    "typing",
]

[tool.setutools]
ext-modules = [
    "pyexshalos.lib.spectrum",
    "pyexshalos.lib.exshalos",
    "pyexshalos.lib.hod",
    "pyexshalos.lib.analytical",
]
