[build-system]
requires = ["setuptools>=61.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pyexshalos"
version = "1.0.0"
description = "A pyhon package for ExSHalos"
authors = [
    {name = "Rodrigo Voivodic", email = "rodrigo.voivodic@gmail.com"}
]
dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools.packages]
find = {}
