[build-system]
requires = ["setuptools>=61.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pyexshalos"
version = "1.0.0"
description = "A pyhon package for ExSHalos"
authors = [
    {name = "Rodrigo Voivodic", email = "rodrigo.voivodic@gmail.com"}
]
dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools.packages]
find = {}

[tool.pyright]
typeCheckingMode = "strict"
# reportUnknownMemberType = false
reportMissingTypeStubs = false
useLibraryCodeForTypes = true

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-select = ["W", "N", "B", "UP", "SIM", "C4"]
ignore = ["F722", "F821"]
